--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^11.0.8",
     "next": "14.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
